--- a/tasks.json
+++ b/tasks.json
@@ -1,8 +1,1 @@
-[
-  "HTML",
-  "CSS",
-  "Responsive design",
-  "Javascript",
-  "PHP",
-  "Laravel"
-]
+[{"name":"prova","completed":""},{"name":"HTML","completed":false},{"name":"CSS","completed":false},{"name":"Responsive design","completed":false},{"name":"Javascript","completed":false},{"name":"PHP","completed":false},{"name":"Laravel","completed":false}]
