--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"name":"prova","completed":""},{"name":"HTML","completed":false},{"name":"CSS","completed":false},{"name":"Responsive design","completed":false},{"name":"Javascript","completed":false},{"name":"PHP","completed":false},{"name":"Laravel","completed":false}]
+[{"name":"ciao","completed":""},{"name":"ciao","completed":""},{"name":"prova","completed":""},{"name":"HTML","completed":false},{"name":"CSS","completed":false},{"name":"Responsive design","completed":false},{"name":"Javascript","completed":false},{"name":"PHP","completed":false},{"name":"Laravel","completed":false}]
