--- a/tasks.json
+++ b/tasks.json
@@ -1,26 +1,1 @@
-[
-  {
-    "name": "HTML",
-    "completed": false
-  },
-  {
-    "name": "CSS",
-    "completed": false
-  },
-  {
-    "name": "Responsive design",
-    "completed": false
-  },
-  {
-    "name": "Javascript",
-    "completed": false
-  },
-  {
-    "name": "PHP",
-    "completed": false
-  },
-  {
-    "name": "Laravel",
-    "completed": false
-  }
-]
+[{"name":"ciao ciao","completed":false},{"name":"HTML","completed":false},{"name":"CSS","completed":false},{"name":"Responsive design","completed":false},{"name":"Javascript","completed":false},{"name":"PHP","completed":false},{"name":"Laravel","completed":false}]
